fixed spacing

--- a/src/components/Testimonial.css
+++ b/src/components/Testimonial.css
@@ -6,7 +6,7 @@
 .testimonial-section {
   width: 90vw;
   margin: 5rem auto;
-  max-width: 1170px; 
+  max-width: 1170px;
   padding: 50px;
 }
 
@@ -40,6 +40,7 @@ article {
   height: 100%;
   opacity: 0;
   transition: all 0.3s linear;
+  box-sizing: content-box;
 }
 
 article.activeSlide {
